# public

./: 1.BisectionMethod.py  BeamSearch.py  EXTRA_Differentiation.py  EXTRA_Integration.py  EulersMethod.py  FalsePositionMethod.py  GraphicalMethod.py  HeunsMethod.py  LinearPolynomialCombined.py  LinearRegression.py  MilnesMethod.py  Newton_Raphson.py  PicardsMethod.py  PolynomialRegression.py  README.md  SecantMethod.py  SimpleFixedPointIteration.py  Simpsons1_3Rule.py  Simpsons3_8Rule.py  SimulatedAnnealing.py  TrapezoidalRule.py  a star.py  basic.txt  bfs.py  bisection_1.py  c++.txt  c.txt  choleskyFactorization.py  cramersrule_1.py  depth_limited_search.py  dfs.py  gausseliminiation_nopivot.py  gausseliminiation_pivot.py  gaussjordan_nopivot.py  gaussjordan_pivot.py  genetic-algorithms.py  hill_climbing_search.py  iterative_dfs.py  java.txt  logic.py  (+5 more)
Code/: A1. Line using Bresenhams Algo.txt  A2. DDA Line Drawing.txt  A3. Line Using Line Equation Coordinate.txt  A4. Line Using Equation.txt  (+36 more)
compiler/Compiler and Automata/: CMakeLists.txt
compiler/Compiler and Automata/Masud Sir/: lab01-check-comment.c  lab02-recognize-string.c  lab03-check-given-identifier.c  lab04-recognize-tokens-lexeme.c  lab05-recognize-blank-space.c  lab06-simulate-lexical-analyzer.c  lab07-constructing-LL1-parsing.c  lab08-implementing-predictive-parser.c  lab09-constructing-recursive-descent-parsing.c  lab10-predictive-parser.c  lab11-calculate-first-and-follow.c  lab12-top-down-parsing.c  lab13-bottom-up-parsing.c  lab14-construct-syntax-tree.c  lab15-generate-three-address-code.c  test.c
(+182 files in other folders)
